--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -1,1 +1,22 @@
-Hello contact
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Contact Page</title>
+  </head>
+  <body>
+    <div>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+        <li>
+          <a href="/contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <!-- End of Navigation-->
+  </body>
+</html>
