fleshed out home page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -20,5 +20,49 @@
       </ul>
     </div>
     <!-- End of Navigation -->
+    <div>
+      <h1>Lorem Ipsum</h1>
+      <h2>Lorem Ipsum</h2>
+      <h3>Lorem Ipsum</h3>
+      <h4>Lorem Ipsum</h4>
+      <h5>Lorem Ipsum</h5>
+      <h6>Lorem Ipsum</h6>
+    </div>
+    <!--Heading/Title -->
+    <div>
+      <p>
+        Bacon ipsum dolor amet prosciutto jerky alcatra shankle, flank kielbasa filet mignon jowl cupim frankfurter shank bresaola meatball hamburger. Landjaeger bacon shank t-bone leberkas, meatloaf venison tenderloin frankfurter sausage capicola biltong. Prosciutto rump shoulder turkey filet mignon doner tail, leberkas beef sausage. Sausage jerky doner cow beef ribs, brisket tail cupim frankfurter shank pork belly chicken. Sausage alcatra ham hock tri-tip, pastrami hamburger tail chuck.
+
+Ribeye pork loin biltong, turducken tri-tip rump leberkas chicken capicola ham pastrami meatloaf shankle t-bone. Turducken meatball jerky spare ribs venison filet mignon fatback pork belly ground round cupim. Rump bresaola chicken, pancetta doner t-bone corned beef bacon short ribs capicola prosciutto. Pancetta biltong bacon short loin pork loin alcatra drumstick hamburger ham hock.
+
+Spare ribs drumstick short ribs bresaola pork belly cupim, porchetta salami boudin pig corned beef. Biltong rump tongue short ribs, shoulder shankle fatback. Shoulder andouille chicken meatball turducken ribeye bresaola. Pork doner salami ribeye swine, frankfurter chuck. Bresaola ball tip pork chop, sirloin venison bacon salami ground round pork pancetta pork loin alcatra. Shoulder drumstick sirloin, chicken turducken boudin chuck frankfurter. Pork loin meatloaf pastrami ground round turducken porchetta pork alcatra jowl.
+
+Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty!
+      </p>
+      <p>
+        Bacon ipsum dolor amet prosciutto jerky alcatra shankle, flank kielbasa filet mignon jowl cupim frankfurter shank bresaola meatball hamburger. Landjaeger bacon shank t-bone leberkas, meatloaf venison tenderloin frankfurter sausage capicola biltong. Prosciutto rump shoulder turkey filet mignon doner tail, leberkas beef sausage. Sausage jerky doner cow beef ribs, brisket tail cupim frankfurter shank pork belly chicken. Sausage alcatra ham hock tri-tip, pastrami hamburger tail chuck.
+
+Ribeye pork loin biltong, turducken tri-tip rump leberkas chicken capicola ham pastrami meatloaf shankle t-bone. Turducken meatball jerky spare ribs venison filet mignon fatback pork belly ground round cupim. Rump bresaola chicken, pancetta doner t-bone corned beef bacon short ribs capicola prosciutto. Pancetta biltong bacon short loin pork loin alcatra drumstick hamburger ham hock.
+
+Spare ribs drumstick short ribs bresaola pork belly cupim, porchetta salami boudin pig corned beef. Biltong rump tongue short ribs, shoulder shankle fatback. Shoulder andouille chicken meatball turducken ribeye bresaola. Pork doner salami ribeye swine, frankfurter chuck. Bresaola ball tip pork chop, sirloin venison bacon salami ground round pork pancetta pork loin alcatra. Shoulder drumstick sirloin, chicken turducken boudin chuck frankfurter. Pork loin meatloaf pastrami ground round turducken porchetta pork alcatra jowl.
+
+Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty!
+      </p>
+      <br>
+      <p>
+        Bacon ipsum dolor amet prosciutto jerky alcatra shankle, flank kielbasa filet mignon jowl cupim frankfurter shank bresaola meatball hamburger. Landjaeger bacon shank t-bone leberkas, meatloaf venison tenderloin frankfurter sausage capicola biltong. Prosciutto rump shoulder turkey filet mignon doner tail, leberkas beef sausage. Sausage jerky doner cow beef ribs, brisket tail cupim frankfurter shank pork belly chicken. Sausage alcatra ham hock tri-tip, pastrami hamburger tail chuck.
+
+Ribeye pork loin biltong, turducken tri-tip rump leberkas chicken capicola ham pastrami meatloaf shankle t-bone. Turducken meatball jerky spare ribs venison filet mignon fatback pork belly ground round cupim. Rump bresaola chicken, pancetta doner t-bone corned beef bacon short ribs capicola prosciutto. Pancetta biltong bacon short loin pork loin alcatra drumstick hamburger ham hock.
+
+Spare ribs drumstick short ribs bresaola pork belly cupim, porchetta salami boudin pig corned beef. Biltong rump tongue short ribs, shoulder shankle fatback. Shoulder andouille chicken meatball turducken ribeye bresaola. Pork doner salami ribeye swine, frankfurter chuck. Bresaola ball tip pork chop, sirloin venison bacon salami ground round pork pancetta pork loin alcatra. Shoulder drumstick sirloin, chicken turducken boudin chuck frankfurter. Pork loin meatloaf pastrami ground round turducken porchetta pork alcatra jowl.
+
+Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty!
+      </p>
+    </div>
+    <!--Paragraph/Hook-->
+    <div>
+      <img src=" http://placehold.it/300x150" alt="Some Stuff and things">
+    </div>
+    <!--Catchy Image-->
   </body>
 </html>
