fleshed out About and Contact Page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -18,5 +18,24 @@
       </ul>
     </div>
     <!-- End of Navigation-->
+
+    <div>
+      <img src="http://placehold.it/1000x150" alt="Broke Back IMG">
+    </div>
+    <!--Top about us IMG-->
+
+    <div>
+      <p>
+        Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
+      </p>
+    </div>
+    <!--Mission Statement-->
+
+    <div>
+      <p>
+        Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
+      </p>
+    </div>
+    <!--Education text-->
   </body>
 </html>
