--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -18,5 +18,31 @@
       </ul>
     </div>
     <!-- End of Navigation-->
+
+    <div>
+      <p>
+        Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
+      </p>
+
+    </div>
+    <!--Part one Text-->
+
+    <div>
+      <p>
+        Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
+      </p>
+
+    </div>
+    <!--Left text Column-->
+    <div>
+      <img src="http://placehold.it/150x300" alt="Image Stuff on Right Div">
+    </div>
+    <!--Right image Column-->
+    <div>
+      <p>
+        Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
+      </p>
+    </div>
+    <!--Bottom Text/Contact INfo-->
   </body>
 </html>
