--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -32,6 +32,24 @@
         Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
       </p>
 
+      <div>
+        <form action="/contact" method='POST'>
+          <h3>Contact Us</h3>
+          <label for="name">Name:</label>
+          <input type="text" name='name' required>
+          <br>
+          <label for="email">Email:</label>
+          <input type="email" name='email' required>
+          <br>
+          <label for="message">Message:</label>
+          <textarea name="message" rows='20' cols= '6' required></textarea>
+          <br>
+          <button type='submit'>Send</button>
+          <input type="submit" value='Send'>
+        </form>
+      </div>
+      <!--End of Contact Form-->
+
     </div>
     <!--Left text Column-->
     <div>
