added valudation and basic server handling to form for about page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -32,6 +32,26 @@
     <!--Mission Statement-->
 
     <div>
+    <form action="/about" method = "POST">
+      <h3>More Info</h3>
+      <label for="name">Name:</label>
+      <input type="text" name="name" required>
+      <br>
+      <label for="email">Email:</label>
+      <input type="email" name="email" required>
+      <br>
+      <label for="address">Address:</label>
+      <textarea name="address" rows="8" cols="40" required></textarea>
+      <br>
+      <label for="phone">Phone:</label>
+      <input type="tel" name="phone" required>
+      <br>
+      <button type="submit">Submit</button>
+    </form>
+
+    </div>
+
+    <div>
       <p>
         Bacon ipsum dolor amet flank alcatra pork belly short loin, sausage leberkas filet mignon venison strip steak pastrami pork loin pork pancetta cow kevin. Tongue jerky landjaeger, ham hock hamburger shoulder salami filet mignon. T-bone bresaola tenderloin, flank rump filet mignon turducken. Doner jerky ribeye cupim kielbasa ground round meatball. Meatloaf porchetta brisket alcatra, cupim bresaola jowl doner leberkas pork belly shoulder meatball chuck. Chuck frankfurter landjaeger cow swine.
       </p>
