--- a/public/html/about.html
+++ b/public/html/about.html
@@ -44,7 +44,7 @@
       <textarea name="address" rows="8" cols="40" required></textarea>
       <br>
       <label for="phone">Phone:</label>
-      <input type="tel" name="phone" required>
+      <input type="tel" name="tel" required>
       <br>
       <button type="submit">Submit</button>
     </form>
